@@ -13,3 +13,5 @@ t/getline.t
 t/import.t
 t/large.t
 t/tied.t
+t/uncomp1.t
+t/uncomp2.t
